        * Added ECORE_CON_REMOTE_CORK for applying TCP_CORK to sends

2011-12-12 Carsten Haitzler (The Rasterman)

        * Fix bug where an animator that just keeps adding another
        animator keeps the animator handler in an infinite loop. Do
        the same as timers and mark them as "just added" to skip in
        this run of animators

2011-12-13  Doyun Kang

	* Add ability to get resource id of last x error in ecore_x.

2011-12-16 Carsten Haitzler (The Rasterman)

        * Clean up some ecore-evas-buffer code
        * Add Ecore-evas extn (external) plug and socket canvas wrappers
        allowing for any ecore-evas to contain an image object that is
        a "socket" for other processes to plug into with "plugs" and
        thus provide image content via a canvas remotely (from another
        process) as well as the socket process passing in events to the
        plug process to it can see key, mouse, multi etc. events.


2011-12-16 Mike Blumenkrantz

        * Fix possible 0 byte allocation in ecore-x

2011-12-20 Carsten Haitzler (The Rasterman)

        * Fix probable leak for g_static_mutex's on some architectures

2011-12-20 Jihoon Kim

	* Add XIM attribute support to Ecore_IMF

2011-12-21 Tae-Hwan Kim (Bluezery)

	* Add proxy set and timeout set functions in ecore_con.

2011-12-26 Tae-Hwan Kim (Bluezery)

	* Add proxy username/password set functions in ecore_con.

2011-12-26  Christopher Michael (devilhorns)

        * Add Ecore_Wayland (backend to support Wayland).
        * Add Shm and Egl engines for ecore_evas to draw in Wayland.

2011-12-27 Carsten Haitzler (The Rasterman)

        * Fix mouse down grab counts going bad by missing events.

2011-12-29 Carsten Haitzler (The Rasterman)

        * Fix massive post data probile in ecore-con that would cause
        post data to be corrupted (as it was never copied into the
        ecore con url struct) or could cause crashes if the memory
        pointed to became invalid.
